syntax = "proto3";


package com.improving.organizationcontext;

import "com/improving/api/organization_api.proto";
import "com/improving/domain/organization_context_domain.proto";
import "com/improving/domain/organization_domain.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "kalix/annotations.proto";

message ByMemberRequest {
    string member_id = 1;
}

message ByOwnerRequest {
    string owner_id = 1;
}

service OrganizationByMemberView {
    option (kalix.codegen) = {
        view: {}
    };

    rpc ProcessOrganizationEstablished(OrganizationEstablished) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc ProcessMembersAddedToOrganization(MembersAddedToOrganization) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc ProcessMembersRemovedFromOrganization(MembersRemovedFromOrganization) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc ProcessOrganizationAccountsUpdated(OrganizationAccountsUpdated) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc ProcessOrganizationContactsUpdated(OrganizationContactsUpdated) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc ProcessOrganizationInfoUpdated(OrganizationInfoUpdated) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc ProcessOrganizationStatusUpdated(OrganizationStatusUpdated) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc ProcessOwnersAddedToOrganization(OwnersAddedToOrganization) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc ProcessOwnersRemovedFromOrganization(OwnersRemovedFromOrganization) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc IgnoreOtherEvents(google.protobuf.Any) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
            ignore: true
        };
    };

    rpc FindOrganizationByMember(ByMemberRequest) returns (stream com.improving.organization.ApiOrganization) {
        option (kalix.method).view.query = {
            query: "SELECT * FROM organizations WHERE :member_id = 1",
            stream_updates: true
        };
        option (google.api.http) = {
            get: "/organizations/by_member/{member_id}"
        };
    }
}

service OrganizationByOwnerView {
    option (kalix.codegen) = {
        view: {}
    };

    rpc ProcessOrganizationEstablished(OrganizationEstablished) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc ProcessMembersAddedToOrganization(MembersAddedToOrganization) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc ProcessMembersRemovedFromOrganization(MembersRemovedFromOrganization) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc ProcessOrganizationAccountsUpdated(OrganizationAccountsUpdated) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc ProcessOrganizationContactsUpdated(OrganizationContactsUpdated) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc ProcessOrganizationInfoUpdated(OrganizationInfoUpdated) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc ProcessOrganizationStatusUpdated(OrganizationStatusUpdated) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc ProcessOwnersAddedToOrganization(OwnersAddedToOrganization) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc ProcessOwnersRemovedFromOrganization(OwnersRemovedFromOrganization) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc IgnoreOtherEvents(google.protobuf.Any) returns (com.improving.organization.ApiOrganization) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organizations"
            ignore: true
        };
    };

    rpc FindOrganizationByOwner(ByOwnerRequest) returns (stream com.improving.organization.ApiOrganization) {
        option (kalix.method).view.query = {
            query: "SELECT * FROM organizations WHERE :owner_id = 1",
            stream_updates: true

        };
        option (google.api.http) = {
            get: "/organizations/by_owner/{owner_id}"
        };
    }
}